--- a/src/components/MainHow/MainHow.css
+++ b/src/components/MainHow/MainHow.css
@@ -1,231 +1,228 @@
-.main_how{
-    padding: 50px 0 40px 0;
-    background: url('../../img/mian_bg_nft.png') no-repeat center;
-    background-size: contain;
+.main_how {
+  padding: 50px 0 40px 0;
+  background: url("../../assets/img/mian_bg_nft.png") no-repeat center;
+  background-size: contain;
 }
 
-.main_how_block{
-    display: flex;
-    margin: 20px 0;
+.main_how_block {
+  display: flex;
+  margin: 20px 0;
 }
 
-
-.main_how .title{
-    max-width: 900px;
-    margin: 0 auto;
+.main_how .title {
+  max-width: 900px;
+  margin: 0 auto;
 }
 
-
-.main_how_center img{
-    max-width:200px;
-    margin: 50px auto 0;
+.main_how_center img {
+  max-width: 200px;
+  margin: 50px auto 0;
 }
 
-.main_how_main{
-    display: flex;
-    margin: 70px auto;
-    align-items: center;
-    justify-content: center;
+.main_how_main {
+  display: flex;
+  margin: 70px auto;
+  align-items: center;
+  justify-content: center;
 }
 
-.main_how_main .main_how_center{
-    width: 40%;
-    text-align: center;
+.main_how_main .main_how_center {
+  width: 40%;
+  text-align: center;
 }
 
-.main_how_center p{
-font-family: Poppins;
-font-style: normal;
-font-weight: normal;
-font-size: 20px;
-line-height: 24px;
-color: #000000;
-text-align: center;
-margin:  50px 0 30px;
-transition: 0.4s;
+.main_how_center p {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 24px;
+  color: #000000;
+  text-align: center;
+  margin: 50px 0 30px;
+  transition: 0.4s;
 }
-.dark .main_how_center p{
-    transition: 0.4s;
-    color: #fff;
-}
-
-.main_how_center a{
-    background: url('../../img/check_faq_bg.png') no-repeat center;
-    background-size: contain;
-    padding: 21px 33px;
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 20px;
-    color: #444444;
-    display: inline-block;
-    cursor: pointer;
-    transition: 0.4s;
-    margin: 30px auto 0;
-    position: relative;
+.dark .main_how_center p {
+  transition: 0.4s;
+  color: #fff;
 }
 
-.main_how_center a span{
-    position: relative;
-    z-index: 1;
+.main_how_center a {
+  background: url("../../assets/img/check_faq_bg.png") no-repeat center;
+  background-size: contain;
+  padding: 21px 33px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 20px;
+  color: #444444;
+  display: inline-block;
+  cursor: pointer;
+  transition: 0.4s;
+  margin: 30px auto 0;
+  position: relative;
 }
 
-.main_how_center a:hover span{
-    position: relative;
-    z-index: 1;
-    color: #121024;
+.main_how_center a span {
+  position: relative;
+  z-index: 1;
 }
 
-.dark .main_how_center a:hover span{
-    color: #fff;
+.main_how_center a:hover span {
+  position: relative;
+  z-index: 1;
+  color: #121024;
 }
 
-.main_how_center a::before{
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top:0;
-    opacity: 0;
-    background: url('../../img/check_faq_bg_hover.png') no-repeat center;
-    background-size: contain;
-    transition: 0.4s;
+.dark .main_how_center a:hover span {
+  color: #fff;
 }
 
-.main_how_center a:hover::before{
-    transition: 0.4s;
-    opacity: 1;
+.main_how_center a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  background: url("../../assets/img/check_faq_bg_hover.png") no-repeat center;
+  background-size: contain;
+  transition: 0.4s;
 }
 
-
-.dark .main_how_center a{
-    transition: 0.4s;
-    color: #fff;
+.main_how_center a:hover::before {
+  transition: 0.4s;
+  opacity: 1;
 }
 
-.main_how_footer{
-    display: flex;
-    justify-content: center;
-    margin: 150px 0 50px;
-    flex-wrap: wrap;
+.dark .main_how_center a {
+  transition: 0.4s;
+  color: #fff;
 }
 
-.main_how_footer_block{
-    background: #E4E4FF;
-    border: 1px solid #797979;
-    border-radius: 28px;
-    padding: 25px;
-    transition: 0.4s;
-    width: 29%;
-    margin-bottom: 30px;
-    transition: 0.4s;
-    position: relative;
-    margin: 2%;
-    cursor: pointer;
+.main_how_footer {
+  display: flex;
+  justify-content: center;
+  margin: 150px 0 50px;
+  flex-wrap: wrap;
 }
 
-.main_how_footer_block img{
-    z-index: 1;
-    position: relative;
+.main_how_footer_block {
+  background: #e4e4ff;
+  border: 1px solid #797979;
+  border-radius: 28px;
+  padding: 25px;
+  transition: 0.4s;
+  width: 29%;
+  margin-bottom: 30px;
+  transition: 0.4s;
+  position: relative;
+  margin: 2%;
+  cursor: pointer;
 }
 
-.main_how_footer_block::before{
-    content: '';
-    width: 0;
-    height: 0;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    opacity: 0;
-    background: linear-gradient(180deg, #39C5FA 0%, #5128E4 100%);
-    position: absolute;
-    transition: 0.4s;
-    border-radius: 28px;
-}
-.main_how_footer_block:hover::before{
-    transition: 0.4s;
-    opacity: 1;
-    width: 100%;
-    height: 100%;
+.main_how_footer_block img {
+  z-index: 1;
+  position: relative;
 }
 
-
-.main_how_footer_block h5{
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 22px;
-    line-height: 32px;
-    text-align: center;
-    color: #000000;
-    text-shadow: 0px 0px 14px rgba(255, 255, 255, 0.25);
-    margin: 30px 0 0;
-    transition: 0.4s;
-    z-index: 1;
-    position: relative;
+.main_how_footer_block::before {
+  content: "";
+  width: 0;
+  height: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  background: linear-gradient(180deg, #39c5fa 0%, #5128e4 100%);
+  position: absolute;
+  transition: 0.4s;
+  border-radius: 28px;
+}
+.main_how_footer_block:hover::before {
+  transition: 0.4s;
+  opacity: 1;
+  width: 100%;
+  height: 100%;
 }
 
-.dark .main_how_footer_block{
-    transition: 0.4s;
-    background: rgba(255, 255, 255, 0.02);
+.main_how_footer_block h5 {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 32px;
+  text-align: center;
+  color: #000000;
+  text-shadow: 0px 0px 14px rgba(255, 255, 255, 0.25);
+  margin: 30px 0 0;
+  transition: 0.4s;
+  z-index: 1;
+  position: relative;
 }
 
-.dark .main_how_footer_block h5, .main_how_footer_block:hover h5{
-    transition: 0.4s;
-    color: #fff;
+.dark .main_how_footer_block {
+  transition: 0.4s;
+  background: rgba(255, 255, 255, 0.02);
 }
 
-.mobile_icons{
-    display: none;
+.dark .main_how_footer_block h5,
+.main_how_footer_block:hover h5 {
+  transition: 0.4s;
+  color: #fff;
+}
+
+.mobile_icons {
+  display: none;
 }
 
 @media (max-width: 991.98px) {
-    .main_how .title{
-        max-width: 95%;
-    }
+  .main_how .title {
+    max-width: 95%;
+  }
 }
 
-
-@media (max-width: 767.98px){
-    .main_how_footer {
-        margin: 50px 0 0;
-    }
-    .main_how_right, .main_how_left{
-        display: none;
-    }
-    .main_how_main .main_how_center{
-        width: 100%;
-    }
-    .mobile_icons{
-        display: flex;
-        justify-content: space-around;
-    }
-    .main_how_footer_block{
-        width: 80%;
-        margin-left: 0;
-        margin-right: 0;
-    }
-    .main_how_footer_block img{
-        margin: 0 auto;
-    }
+@media (max-width: 767.98px) {
+  .main_how_footer {
+    margin: 50px 0 0;
+  }
+  .main_how_right,
+  .main_how_left {
+    display: none;
+  }
+  .main_how_main .main_how_center {
+    width: 100%;
+  }
+  .mobile_icons {
+    display: flex;
+    justify-content: space-around;
+  }
+  .main_how_footer_block {
+    width: 80%;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .main_how_footer_block img {
+    margin: 0 auto;
+  }
 }
 
-@media (max-width: 575.98px){
-    .main_how_main{
-        margin: 0 auto 50px;
-    }
-    .main_how_footer_block{
-        width: 100%;
-    }
+@media (max-width: 575.98px) {
+  .main_how_main {
+    margin: 0 auto 50px;
+  }
+  .main_how_footer_block {
+    width: 100%;
+  }
 
-    .main_how .mobile_icons svg{
-        width: 20%;
-    }
+  .main_how .mobile_icons svg {
+    width: 20%;
+  }
 
-    .main_how_center p{
-        font-size: 16px;
+  .main_how_center p {
+    font-size: 16px;
     line-height: 22px;
-    }
+  }
 }
