--- a/src/components/Partners/Partners.css
+++ b/src/components/Partners/Partners.css
@@ -1,50 +1,47 @@
-.partners{
-    padding: 40px 0;
-    background: url('../../img/mian_bg_nft.png') no-repeat center;
-    background-size: contain;
+.partners {
+  padding: 40px 0;
+  background: url("../../assets/img/mian_bg_nft.png") no-repeat center;
+  background-size: contain;
 }
 
-.partners .title{
-    max-width: 400px;
-    margin: 40px auto;
+.partners .title {
+  max-width: 400px;
+  margin: 40px auto;
 }
 
-.partners_slide_wrapper{
-    padding: 30px;
+.partners_slide_wrapper {
+  padding: 30px;
 }
 
-.partners_slide{
-    border-radius: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width:240px;
+.partners_slide {
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 240px;
+  padding: 20px;
+  margin: 0 auto;
+  height: 100px;
+  transition: 0.4s;
+  cursor: pointer;
+}
+
+@media (max-width: 767.98px) {
+  div:has(.empty) {
+    display: none;
+  }
+  .partners_slide_wrapper {
     padding: 20px;
-    margin: 0 auto;
-    height: 100px;
-    transition: 0.4s;
-    cursor: pointer;
-}
+  }
 
+  .partners .title {
+    max-width: 60%;
+  }
+  .partners_slide {
+    padding: 0;
+  }
 
-
-@media (max-width: 767.98px){
-    div:has(.empty){
-        display: none;
-    }
-    .partners_slide_wrapper{
-        padding: 20px;
-    }
-
-    .partners .title{
-        max-width: 60%;
-    }
-    .partners_slide{
-        padding: 0;
-    }
-
-    .partners_slide_wrapper {
-        padding: 0 20px;
-    }
-    
+  .partners_slide_wrapper {
+    padding: 0 20px;
+  }
 }
